briank-gitops/spaces/kw-smoke-dev/smoke/httproute-smoke.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  annotations:
    apps.tanzu.vmware.com/promotable: ""
    apps.tanzu.vmware.com/promote-group: ContainerApp/smoke
  name: smoke-http-route
spec:
  parentRefs:
  - group: networking.tanzu.vmware.com
    kind: Entrypoint
    name: smoke
  rules:
  - backendRefs:
    - kind: Service
      name: smoke
      port: 8080
