briank-gitops/spaces/kw-smoke-dev/smoke/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: smoke-route
  annotations:
    healthcheck.gslb.tanzu.vmware.com/service: smoke
    healthcheck.gslb.tanzu.vmware.com/path: /
    healthcheck.gslb.tanzu.vmware.com/port: "8080"
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: default-gateway
    sectionName: http-smoke-dev
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: smoke
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
